--- a/src/01_part_1.Rmd
+++ b/src/01_part_1.Rmd
@@ -40,13 +40,13 @@ Here are the steps to install PostgreSQL on your local computer:
 
 4.  Once the installation is complete, PostgreSQL will be ready to use on your localhost.
 
-By installing PostgreSQL on your local computer, you will have a dedicated database server to work with for your workshop. This will allow you to have full control over the database environment and perform all necessary tasks directly on your machine."
+By installing PostgreSQL on your local computer, you will have a dedicated database server to work with for your workshop. This will allow you to have full control over the database environment and perform all necessary tasks directly on your machine.
 
 #### Managed remote database (Aiven)
 
 You also have the option to utilize a managed remote database for your workshop. There are various cloud providers that offer managed PostgreSQL databases, and one such provider is Aiven. Aiven was specifically chosen for this workshop due to its user-friendly interface and their generous support towards open-source initiatives.
 
-If you decide to use Aiven for your workshop and would like to take advantage of free bonus credits for a more powerful PostgreSQL database, please provide your email address through the following Google Forms link. This will ensure you receive the bonus credits to enhance your database experience.
+If you decide to use Aiven for your workshop, use the coupon the trainer provides you for receiving the credits.
 
 To create and connect to a remote PostgreSQL database on Aiven, please follow the guidelines below:
 
@@ -58,13 +58,49 @@ To create and connect to a remote PostgreSQL database on Aiven, please follow th
 
 4.  Select the desired specifications and configurations for your database, ensuring it meets your requirements.
 
+    If you feel that you want to start with the Free-tier level PostgreSQL, you can just use the Free-tier and not use your credits at this time.
+
+    ´![](img/p1/create_aiven_pg.png)
+
 5.  Once the database is created, you will receive the necessary connection details such as host, port, username, and password.
 
 6.  Use these connection details to establish a connection to your remote PostgreSQL database from your local environment or any desired client tool.
 
-By following these guidelines, you will be able to leverage the capabilities of a remote PostgreSQL database provided by Aiven, empowering you to work with a more robust and scalable infrastructure for your workshop.Creating a Spatial Database
+By following these guidelines, you will be able to leverage the capabilities of a remote PostgreSQL database provided by Aiven, empowering you to work with a more robust and scalable infrastructure for your workshop.
 
-#### Creating the database
+#### Connecting to the database with a database client
+
+QGIS can work as your database client. If you have another PostgreSQL client of preference (e.g. pgAdmin, Dbeaver), you can also use that one.
+
+### Integrating the Database with QGIS
+
+1.  In QGIS, go to the "Browser" panel and expand the "PostgreSQL" node.
+
+2.  Right-click on "PostgreSQL" and select "New Connection" to open the "Create a New PostGIS Connection" dialog.
+
+3.  Enter the necessary connection details, including the database name, host, port, username, and password. Mark also "Also list tables with no geometry" as well.
+
+4.  Click "Test Connection" to verify the connection and ensure it is successful.
+
+5.  Once the connection is verified, click "OK" to close the dialog and establish the connection.
+
+    Using a localhost setup for the workshop, the database connection details would look for example as follows:
+
+    ![](img/p1/add_postgres.png)
+
+6.  The database should now appear under the "PostgreSQL" node in the "Browser" panel.
+
+![](img/p1/03.png)
+
+### Creating the Database specifically for the Refuge Camp
+
+Besides the default database PostgreSQL creates called "postgres", we need to create another database dedicated to our Refuge camp project.
+
+You can execute / run SQL in QGIS in various manners, one is right-clicking the database connection you just created and choosing execute SQL.
+
+![](img/p1/exec_sql.png)
+
+Copy and paste the following SQL for creating the database:
 
 ::: code-box
 ``` sql
@@ -72,26 +108,18 @@ CREATE DATABASE camp_facilities_db;
 ```
 :::
 
+![](img/p1/create_db.png)
+
+Then, edit the db-connection you already made, and change the name of the database to camp_facilities_db:
+
+![](img/p1/change_db_info.png)
+
+And then we need to enable the PostGIS spatial extension, by executing the following SQL (as before):
+
 ::: code-box
 ``` sql
 CREATE EXTENSION postgis;
 ```
 :::
 
-### Integrating the Database with QGIS
-
-1.  In QGIS, go to the "Browser" panel and expand the "PostGIS" node.
-
-2.  Right-click on "PostGIS" and select "New Connection" to open the "Add PostGIS Layers" dialog.
-
-3.  Enter the necessary connection details, including the database name, host, port, username, and password.
-
-4.  Click "Test Connection" to verify the connection and ensure it is successful.
-
-5.  Once the connection is verified, click "OK" to close the dialog and establish the connection.
-
-6.  The database should now appear under the "PostGIS" node in the "Browser" panel.
-
-![Now you can see connection and explore the database:](img/p1/p_01_i_02.png)
-
-![](img/p1/03.png)
+For the long-term, you can consider using a database management tool, such as pgAdmin4 or Dbeaver. You can also use psql which is a great command-line tool for connecting and managing your PostgreSQL databases. Remember that these tools are just different ways accessing to your database.
