--- a/src/index.Rmd
+++ b/src/index.Rmd
@@ -14,11 +14,13 @@ output:
 documentclass: book
 ---
 
-<!-- Exercises -->
+# Introduction
 
-# Welcome!
+Welcome to the workshop on "Building an Enterprise GIS Workflow with QGIS and PostGIS" originally presented at FOSS4G 2023 Prizren (Kosovo). This workshop combines informative slides and hands-on exercises designed to guide you through the process of setting up a powerful GIS environment using QGIS and PostGIS. You can access the workshop slides through the following [link](https://drive.google.com/file/d/1AAZrR3EQcrioT99CG66VNiS1S6sZ5W1I/view?usp=sharing), and the exercises are available on this website for your reference and practice.
 
-Workshop Objectives:
+![QGIS is a robust environment for building PostGIS-enabled Enterprise GIS workflows](img/p1/sample_data.png){width="517"}
+
+# Workshop Objectives:
 
 -   Create an enterprise GIS workflow using QGIS and PostGIS.
 
