--- a/src/01_part_1.Rmd
+++ b/src/01_part_1.Rmd
@@ -92,6 +92,8 @@ QGIS can work as your database client. If you have another PostgreSQL client of 
 
     ![](images/paste-EA802788.png)
 
+    If you get errors when testing the connection, be sure to ensure that you do not have any spaces in the connection parameters (Host, Port, Database, Username, Password). Sometimes the extra spaces come along when we copy and paste text.
+
 6.  The database should now appear under the "PostgreSQL" node in the "Browser" panel.
 
 ![](img/p1/03.png)
