--- a/src/03_part_3.Rmd
+++ b/src/03_part_3.Rmd
@@ -4,7 +4,7 @@ Now you will put test the designed data model creating data in QGIS. This allows
 
 ## Loading some aerial imagery for context in QGIS
 
-Download some recent aerial imagery that your team and collaborators have acquired from the area of interest from the this [link (in Google Drive)](https://drive.google.com/file/d/1pUneAy-ZPKMJRh2z2UOPWKlSZa44CvMS/view?usp=sharing), and add the .tif-file to your QGIS project:
+Download some recent aerial imagery that your team and collaborators have acquired from the area of interest from the this [link (in Google Drive)](https://drive.google.com/file/d/1182W68W3UalZ3z1iDP46daX4K7lMGsDR/view?usp=share_link), and add the .tif-file to your QGIS project:
 
 ![](img/p1/add_aerial_img.png)
 
