--- a/src/03_part_3.Rmd
+++ b/src/03_part_3.Rmd
@@ -1,14 +1,14 @@
 # Exercise 3: Creating and Editing Data in QGIS
 
-Now you will put test the designed data model creating data in QGIS. This allows you to validate that you will be capturing the required information. Working directly in QGIS, you will experience the seamless integration between the software and the database.
+Now you will proceed to test the designed data model by creating data within QGIS. This allows you to validate that you will be capturing the required information. Working directly in QGIS, you will experience a first glimpse of integrating QGIS to a database.
 
 ## Loading some aerial imagery for context in QGIS
 
-Download some recent aerial imagery that your team and collaborators have acquired from the area of interest from the this [link (in Google Drive)](https://drive.google.com/file/d/1182W68W3UalZ3z1iDP46daX4K7lMGsDR/view?usp=share_link), and add the .tif-file to your QGIS project:
+For the sake of the workshop, download some recent aerial imagery that your team and collaborators have acquired from the area of interest from the this [link (in Google Drive)](https://drive.google.com/file/d/1182W68W3UalZ3z1iDP46daX4K7lMGsDR/view?usp=share_link), and add the .tif-file to your QGIS project:
 
 ![](img/p1/add_aerial_img.png)
 
-The data is provided by the International Organization for Migration and if you are interested in the original dataset and some other interesting datasets, find out more at: <https://data.humdata.org/dataset/iom-bangladesh-needs-and-population-monitoring-npm-drone-imagery-and-gis-package-by-camp-august-2018>
+The data is provided by the International Organization for Migration and if you are interested in the original dataset and some other interesting datasets, read more at: <https://data.humdata.org/dataset/iom-bangladesh-needs-and-population-monitoring-npm-drone-imagery-and-gis-package-by-camp-august-2018>
 
 ## Loading the Data and Creating New Features
 
